--- a/style.css
+++ b/style.css
@@ -1,1 +1,82 @@
+html {
+    display: flex;
+    font-family: Helvetica, sans-serif;
+    font-size: 22px;
+    color: seashell;
+    background-color: black;
+    opacity: 0.9;
+    justify-content: center;
+}
 
+body {
+    justify-content: center;
+    
+}
+
+header {
+    display: inline-flex;
+    height: 69px;
+    box-sizing: border-box;
+    border-bottom: seashell solid 1px;
+    width: 100vw;
+    justify-content: space-between;
+    background-color: black;
+    padding-right: 20px;
+}
+
+li{
+    list-style-type: none;
+    display: inline-block;
+    align-content: space-around;
+    margin: 10px;
+    justify-content: center;
+    vertical-align: auto;
+}
+
+li a {
+    color: seashell;
+    
+}
+
+header img {
+    padding: 10px;
+    height: 50px;
+}
+
+.mission {
+    display: flex;
+    background-image: url("/Images/img-mission-background.jpg");
+    height: 700px;
+    width: 1200px;
+    align-content: center;
+    margin: auto;
+}
+.mission-text {
+    align-items: center;
+    background-color: black;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+}
+
+.mission-text h2 {
+    margin: 12px 0px;
+}
+
+.mission-text h4 {
+    margin: 12px
+}
+
+.month {
+    display: flex;
+    margin: auto;
+    flex-flow: column;
+    align-content: center;
+}
+
+.month h2 h4{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    margin: auto;
+}
