--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ main {
     text-align: center;
 }
 
-.month h2, h4{
+h2 h4{
     display: flex;
     flex-wrap: wrap;
     align-content: center;
@@ -150,4 +150,57 @@ main {
     justify-content: center;
     align-content: center;
     margin: auto;
+    text-align: center;
+}
+
+.locations h2 {
+    margin: 0;
+    padding: 0;
+}
+
+.loccontainer {
+    box-sizing: border-box;
+    justify-content: center;
+    display: flex;
+    flex-flow: row;
+    text-align: center;
+    justify-content: center;
+    margin: 0 -5px;
+}
+
+.address {
+    display: grid;
+    box-sizing: border-box;
+    flex-flow: row;
+    background-color: black;
+    justify-content: center;
+    margin: 15px 20px;
+    flex: 1 0 300px;
+    height: 300px;
+    max-width: 300px;
+    opacity: 1;
+}
+
+.address h4 {
+    font-weight: lighter;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    margin: auto;
+    text-align: center;
+}
+
+footer {
+    height: 60px;
+}
+
+#copy {
+    display: inline-flex;
+    box-sizing: border-box;
+    margin-left: 30px;
+    padding-bottom: 30px;
 }
