--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ main {
 
 .mission {
     display: flex;
-    background-image: url("/Images/img-mission-background.jpg");
+    background-image: url("./Images/img-mission-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
