--- a/style.css
+++ b/style.css
@@ -169,9 +169,9 @@ h2 h4{
 }
 
 .address {
-    display: grid;
+    display: flex;
     box-sizing: border-box;
-    flex-flow: row;
+    flex-flow: column;
     background-color: black;
     justify-content: center;
     margin: 15px 20px;
@@ -205,4 +205,14 @@ footer {
     box-sizing: border-box;
     margin-left: 30px;
     padding-bottom: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+    .address {
+        margin: 15px 5px;
+    }
+
+    header li {
+        flex-shrink: 1;
+    }
 }
